<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/main"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DetailsActivity">

    <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_movie"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/movieDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintVertical_bias="1.0">

        <TextView
                android:id="@+id/movieIDTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movieid"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/movieIDEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,TouchTargetSizeCheck,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/studioTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studio"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/studioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/genreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/genreEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/directorsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directors"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/directorsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/writersTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writers"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/writersEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
                android:id="@+id/actorsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actors"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/actorsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="text"
                android:textSize="14sp"
                tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <LinearLayout
                android:id="@+id/lengthYearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/lengthLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/lengthTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/lengthEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:inputType="number"
                        android:textSize="14sp"
                        tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/yearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/yearTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/yearEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:inputType="number"
                        android:textSize="14sp"
                        tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/descriptionMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Description"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <LinearLayout
                android:id="@+id/mpaCriticsRatingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:id="@+id/mpaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/mpaRatingTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mpa_rating"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/mpaRatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:inputType="text"
                        android:textSize="14sp"
                        tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/criticsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/criticsRatingTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/critics_rating"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/criticsRatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:inputType="numberDecimal"
                        android:textSize="14sp"
                        tools:ignore="Autofill,LabelFor,SmallSp,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/cancelUpdateButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFC107"
                    android:text="Cancel"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            <Button
                    android:id="@+id/updateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#4CAF50"
                    android:text="Update"
                    android:textColor="#000000"
                    android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
